--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#ij7s5jg{display:flex;justify-content:flex-end;width:100%;}#insama3{width:70%;}#i8o5z7g{display:flex;justify-content:flex-end;}#ia2offo{width:30%;align-self:flex-end;}#i79lif3{padding:10px;font-size:42px;}#ib5smbx{padding:10px;}#ibn2043{margin:0px;padding:0px;color:rgb(0, 0, 0);font-family:"Open Sans", Arial, sans-serif;font-size:14px;text-align:justify;}#i6cap1t{color:rgb(0, 0, 0);font-family:"Open Sans", Arial, sans-serif;font-size:14px;text-align:justify;}#i5gddmk{width:50%;height:50px;color:white;background-color:#000000;border-radius:10px 10px 10px 10px;margin:10px 0 0 0;}#ikygwqi{width:70%;}#irbdxjl{width:30%;align-self:flex-end;}#i6g39ml{display:flex;justify-content:flex-end;}#i1vbnij{margin:32px 0 0 0;}#i5m0wff{color:black;width:100%;height:100%;}#iwziewi{display:flex;flex-direction:column-reverse;}#ipe4gc8{width:100%;}#ieuwtjr{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ikn9x8k{padding:10px;}#i562xup{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ihwv0bh{padding:10px;}#i4gmju3{width:100%;}#i4efy2t{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#irsb19f{padding:10px;}#iek69ej{width:100%;}#i0ppjuu{margin:32px 0 0 0;}#i4qj876{text-align:center;font-size:24px;font-weight:600;}#ih8ol0z{color:black;width:100%;height:250px;}#i9r4jfk{padding:10px;text-align:center;font-weight:600;}#i9nc3u7{color:black;width:100%;height:250px;}#i30a92k{padding:10px;text-align:center;font-weight:600;}#ir8f4wu{color:black;width:100%;height:250px;}#is1nylo{padding:10px;text-align:center;font-weight:600;}#ic7cagl{color:black;width:100%;height:250px;}#ixx83yw{padding:10px;text-align:center;font-weight:600;}#ia70upa{color:black;width:100%;height:250px;}#irncszh{padding:10px;text-align:center;font-weight:600;}#iejf2zg{color:black;width:100%;height:250px;}#iogx2gx{padding:10px;text-align:center;font-weight:600;}#ijwqfuo{padding:0px 0 0 0;}#inib2wy{color:black;height:47.25px;}
+* { box-sizing: border-box; } body {margin: 0;}#insama3{width:70%;}#i8o5z7g{display:flex;justify-content:flex-end;}#ia2offo{width:30%;align-self:flex-end;}#i79lif3{padding:10px;font-size:42px;}#ib5smbx{padding:10px;}#ibn2043{margin:0px;padding:0px;color:rgb(0, 0, 0);font-family:"Open Sans", Arial, sans-serif;font-size:14px;text-align:justify;}#i6cap1t{color:rgb(0, 0, 0);font-family:"Open Sans", Arial, sans-serif;font-size:14px;text-align:justify;}#i5gddmk{width:50%;height:50px;color:white;background-color:#000000;border-radius:10px 10px 10px 10px;margin:10px 0 0 0;}#ikygwqi{width:70%;}#irbdxjl{width:30%;align-self:flex-end;}#i6g39ml{display:flex;justify-content:flex-end;}#i1vbnij{margin:32px 0 0 0;}#i5m0wff{color:black;width:100%;height:100%;}#iwziewi{display:flex;flex-direction:column-reverse;}#ipe4gc8{width:100%;}#ieuwtjr{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ikn9x8k{padding:10px;}#i562xup{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ihwv0bh{padding:10px;}#i4gmju3{width:100%;}#i4efy2t{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#irsb19f{padding:10px;}#iek69ej{width:100%;}#i0ppjuu{margin:32px 0 0 0;}#i4qj876{text-align:center;font-size:24px;font-weight:600;}#ih8ol0z{color:black;width:100%;height:250px;}#i9r4jfk{padding:10px;text-align:center;font-weight:600;}#i9nc3u7{color:black;width:100%;height:250px;}#i30a92k{padding:10px;text-align:center;font-weight:600;}#ir8f4wu{color:black;width:100%;height:250px;}#is1nylo{padding:10px;text-align:center;font-weight:600;}#ic7cagl{color:black;width:100%;height:250px;}#ixx83yw{padding:10px;text-align:center;font-weight:600;}#ia70upa{color:black;width:100%;height:250px;}#irncszh{padding:10px;text-align:center;font-weight:600;}#iejf2zg{color:black;width:100%;height:250px;}#iogx2gx{padding:10px;text-align:center;font-weight:600;}#ik1w6oa{padding:0px 0 0 0;}#i7xrfb7{width:100%;display:flex;justify-content:flex-end;}#i68774q{color:black;height:47.25px;}
 
 </style>
 
@@ -75,34 +75,34 @@
 		<html>
  <head></head>
  <body id="in3lu4v">
-  <div id="ijwqfuo" class="container-fluid">
-   <div id="ir084t4" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
-    <div id="i6smpz7" class="col">
-     <nav id="i78hucu" class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid" id="idjr892">
-       <div id="toggle-5479098a-a1bd-4021-b1d4-c91a50cbf7e4" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-5479098a-a1bd-4021-b1d4-c91a50cbf7e4" aria-controls="collapse-5479098a-a1bd-4021-b1d4-c91a50cbf7e4" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
+  <div id="ik1w6oa" class="container-fluid">
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="iq2zmdh">
+    <div class="col">
+     <nav class="navbar navbar-expand-lg navbar-light" id="iz617dg">
+      <div class="container-fluid">
+       <div id="toggle-68ac2786-892c-4286-8c83-03a4d3381850" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-68ac2786-892c-4286-8c83-03a4d3381850" aria-controls="collapse-68ac2786-892c-4286-8c83-03a4d3381850" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
        </div>
-       <div id="collapse-5479098a-a1bd-4021-b1d4-c91a50cbf7e4" class="collapse navbar-collapse">
-        <ul id="ij7s5jg" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <div class="col" id="igdiqjs">
-          <img id="inib2wy" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="navbar-brand" id="irihs3h">D Square Solar Services</a>
+       <div id="collapse-68ac2786-892c-4286-8c83-03a4d3381850" class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="i7xrfb7">
+         <div class="col" id="i29nm0x">
+          <img id="i68774q" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a href="#" class="navbar-brand" id="in7su17">D Square Solar Services</a>
          </div>
-         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ifdrgil" class="nav-link">Home</a></li>
-         <li id="ivs5m86" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="iorpmie" class="nav-link">About Us</a></li>
-         <li id="i9hzzji" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="i2f730i" class="nav-link">Contact Us</a></li>
-         <li id="ibfmiu3" class="nav-item"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="ilqp6on" class="nav-link">Products</a></li>
-         <li id="il02bv8" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="ioiu1cu" class="nav-link active">Projects</a></li>
+         <li class="nav-item" id="ij90pe9"><a aria-current="page" href="#" class="nav-link" id="iwxskt3">Home</a></li>
+         <li class="nav-item" id="ip50kbf"><a href="#" class="nav-link active" id="i2ijthg">About Us</a></li>
+         <li class="nav-item" id="iqy4h08"><a href="#" class="nav-link" id="ivs3tfa">Contact Us</a></li>
+         <li class="nav-item" id="itfqnan"><a href="#" class="nav-link" id="idx7q6l">Products</a></li>
+         <li class="nav-item" id="ig9qdm9"><a href="#" class="nav-link" id="ih4rzrs">Projects</a></li>
          <li class="nav-item dropdown"><a href="#" id="navbarDropdown-7" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
-          <ul aria-labelledby="navbarDropdown" id="ioxjxei" class="dropdown-menu">
-           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="ig1cr5q" class="dropdown-item">O&amp;M</a></li>
-           <li><a href="#" id="iku8hbc" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="ii725nh" class="dropdown-item">Module Cleaning</a></li>
+          <ul aria-labelledby="navbarDropdown" class="dropdown-menu" id="inf8zy7">
+           <li><a href="#" class="dropdown-item" id="i8bb68r">O&amp;M</a></li>
+           <li><a href="#" class="dropdown-item" id="i09ehzk">Installation</a><a href="#" class="dropdown-item" id="ips27ry">Module Cleaning</a></li>
            <li></li>
            <li></li>
           </ul></li>
         </ul>
         <form method="get" class="d-flex">
-         <input type="search" placeholder="Search" aria-label="Search" id="i6peafs" class="form-control me-2"><button type="submit" class="btn btn-outline-success">Search</button>
+         <input type="search" placeholder="Search" aria-label="Search" class="form-control me-2"><button type="submit" class="btn btn-outline-success">Search</button>
         </form>
        </div>
       </div>
@@ -110,18 +110,16 @@
     </div>
    </div>
   </div>
-  <div id="ik1w6oa" class="container-fluid">
-   <div id="i8o5z7g" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
-    <div id="insama3" class="col">
-     <div id="i79lif3">
-      WE CREATE UNIQUE &amp; EFFICIENT DIGITAL SOLUTION
-     </div>
+  <div id="i8o5z7g" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+   <div id="insama3" class="col">
+    <div id="i79lif3">
+     WE CREATE UNIQUE &amp; EFFICIENT DIGITAL SOLUTION
     </div>
-    <div id="ia2offo" class="col">
-     <div id="ib5smbx">
-      <strong id="ibn2043">Lorem Ipsum</strong><span id="i6cap1t">&nbsp;is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</span>
-     </div><button type="button" id="i5gddmk">Contact Us</button>
-    </div>
+   </div>
+   <div id="ia2offo" class="col">
+    <div id="ib5smbx">
+     <strong id="ibn2043">Lorem Ipsum</strong><span id="i6cap1t">&nbsp;is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</span>
+    </div><button type="button" id="i5gddmk">Contact Us</button>
    </div>
   </div>
   <div id="i1vbnij" class="container-fluid">
