--- a/projects.html
+++ b/projects.html
@@ -244,19 +244,19 @@
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
          <!-- Links -->
-         <h6 class="text-uppercase fw-bold mb-4">Products</h6>
-         <p><a href="#!" class="text-reset">Angular</a></p>
-         <p><a href="#!" class="text-reset">React</a></p>
-         <p><a href="#!" class="text-reset">Vue</a></p>
-         <p><a href="#!" class="text-reset">Laravel</a></p>
+         <h6 class="text-uppercase fw-bold mb-4" id="ixz2r4u">Links</h6>
+         <p id="ifae549"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="text-reset" id="ij5qo03">Home</a></p>
+         <p><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" class="text-reset" id="i82vgff">About Us</a></p>
+         <p><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="text-reset" id="if8cfoc">Contact Us</a></p>
+         <p></p>
         </div><!-- Grid column --><!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" id="io6n5ya">
          <!-- Links -->
          <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
-         <p><a href="#!" class="text-reset">Pricing</a></p>
-         <p><a href="#!" class="text-reset">Settings</a></p>
-         <p><a href="#!" class="text-reset">Orders</a></p>
-         <p><a href="#!" class="text-reset">Help</a></p>
+         <p><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="text-reset" id="il0rn88">Products&nbsp;</a></p>
+         <p><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="text-reset" id="ipw0axm">Projects</a></p>
+         <p><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" class="text-reset" id="ifx08tm">O&amp;M</a></p>
+         <p><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" class="text-reset" id="i6kkyvn">Module Cleaning</a></p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
          <!-- Links -->
